# wgmodkit

./: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
src/: App.tsx  features.mdx  main.tsx  settings.d.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: game-modding.tsx  steam-games.tsx  theme-switch.tsx
src/game/: hooks.ts  stores.ts
src/steam/: games.ts  hooks.ts  stores.ts  utils.ts
src/utils/: assets.ts  steam.ts
