[package]
name = "wgmodkit"
version = "0.0.0"
description = "Wargroove ModKit"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [
  "fs-all",
  "dialog-all",
  "os-all",
  "path-all",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
halleypack = { git = "https://github.com/gp27/halleypack-rust", branch = "main" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
